2008-04-30  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb (PackageConfig#guess_default_path): handle DL exception.

2008-04-26  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: fix document dependency.

2008-04-24  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: don't substitute prefixed gcc.

	* Rakefile: include libruby-cairo.a into gem for mswin32.

	* index.html: update information for Windows users.

	* src/rb_cairo.c: 1.6.1 -> 1.7.0.

	* test/test_pkg_config.rb: update expected result.

	* NEWS: update.

	* Rakefile: fix platform detection.

	* src/rb_cairo.c: 1.7.0 -> 1.6.1.

	* Rakefile, src/lib/cairo.rb: support gem for mswin32.

	* README (Windows): add.

	* Rakefile: don't require 'cairo' if needless.

	* pkg-config.rb (PackageConfig#guess_default_path): ignore
	require 'dl/import' error.

	* pkg-config.rb (PackageConfig#guess_default_path): support
	PKG_CONFIG_LIBDIR.
	Suggested by OBATA Akio. Thanks!!!

2008-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: fix unbelievable typos.
	Reported by kimura wataru. Thanks!!!

	* README: update an entry for kimura wataru.

2008-04-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.6.0 -> 1.7.0.

	* dist.sh: include documents.

	* Rakefile:
	- follow the recent Hoe's changes.
	- fix dependencies.

	* src/rb_cairo_surface.c: implemented Cairo::PSSurface#eps?.

	* samples/png.rb: use convenience notation.

	* samples/pac.rb, samples/pac2.rb: use Cairo::Paper.

	* src/rb_cairo_surface.c: don't change paper's unit.

	* src/lib/cairo/papers.rb: add landscape papers.

	* test/test_paper.rb, src/lib/cairo/paper.rb: support name parsing.

	* src/lib/cairo/paper.rb: improve unit handling.

	* src/rb_cairo.c:
	- BINDINGS_VERSION: 1.5.2 -> 1.6.0.
	- support <= 1.6.0.

	* NEWS: update.

	* src/lib/cairo/papers.rb: fix unit.

	* src/cairo.def, src/rb_cairo.c, src/rb_cairo.h, src/lib/cairo.rb,
	src/rb_cairo_surface.c: Cairo::PSSurface.new,
	Cairo::PDFSurface.new, Cairo::SVGSurface.new,