@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2008-04-16 14:48:23 $
+ * $Date: 2008-04-30 04:57:51 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -16,6 +16,23 @@
 #include "rb_cairo_private.h"
 
 #include "rubyio.h"
+
+#if CAIRO_HAS_WIN32_SURFACE
+#  define OpenFile OpenFile_win32
+#  include <cairo-win32.h>
+#  undef OpenFile
+#endif
+
+#if CAIRO_HAS_QUARTZ_SURFACE
+#  ifndef HAVE_TYPE_ENUM_RUBY_VALUE_TYPE
+enum ruby_value_type {
+  RUBY_T_DATA = T_DATA
+}
+#  endif
+#  undef T_DATA
+#  include <cairo-quartz.h>
+#  define T_DATA RUBY_T_DATA
+#endif
 
 #if CAIRO_HAS_PS_SURFACE || CAIRO_HAS_PDF_SURFACE || CAIRO_HAS_SVG_SURFACE
 #  define HAS_CREATE_CR_CLOSURE_SURFACE 1
